Fixed todo styling so dark mode is enabled automatically Had to modify other parts of the code as a result too

--- a/css/todo.css
+++ b/css/todo.css
@@ -7,14 +7,15 @@ body {
 .container {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(135deg, #fdc1ac, #e04c4c);
+  background: #222;
   padding: 10px;
 }
 
 .todo-app {
   width: 100%;
   max-width: 50vw;
-  background: white;
+  background: linear-gradient(135deg, #fdc1ac, #e04c4c);
+  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.2);
   margin: 20vh auto 0;
   padding: 3rem 2rem 5rem;
   border-radius: 10px;
@@ -41,6 +42,7 @@ body {
   border-radius: 2rem;
   padding-left: 1rem;
   margin-bottom: 1rem;
+  border: 1px solid white;
 }
 
 .row input {
@@ -54,7 +56,7 @@ body {
 .row button {
   padding: 1rem 2.5rem;
   border-radius: 2rem;
-  border: 0;
+  border: 1px solid white;
   outline: 0;
   background-color: #ff5100;
   color: white;
